# module_bot

./: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: app.py  config.py  database.py  models.py
app/bot/: errors.py  keyboards.py  services.py
app/bot/handlers/: __init__.py  menu.py  start.py
app/static/: data.py
tests/: test_db.py
